syntax = "proto3";

message Wallet {
    string Name = 1;
    string Type = 2;
    string ScriptType = 3;
    string KeystoreType = 4;
    string SeedPhrase = 5;
    string PublicKey = 6;
    string PrivateKey = 7;
}